# pron

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  MENTAL_MODEL.md  Makefile  README.md  TEST_TREES.md  install.sh
.config/: nextest.toml
.github/workflows/: release.yml
.opencode/: contree.md  opencode.json
.opencode/lib/: contree-core.test.ts  contree-core.ts
.opencode/plugin/: contree.ts  trunk-sync.ts
.opencode/skill/change/: SKILL.md
.trunk-sync/timeclock/: fa74f417-76ce-4f80-a6f5-96da7236c691.json  ses_06d8355f5ffeZrKoCfMJKzWb5M.json  ses_06d930a36ffeHDFb33vPWevmce.json  ses_07c022345ffeWrM8mlnhf87vb7.json  ses_0dad70aeeffe9aF8drP5uDwZug.json  ses_0dad73c3fffeOySVhckmwKMe9K.json  ses_0dad82c2affe79c2jOisLmDW0R.json  ses_0dad85cfcffeCgIJPJ6n0au2lw.json  ses_0dad8730dffeMVoz5oKnaXjUAu.json  ses_0dad88563ffenTjkNWAzYqPXOu.json  ses_0e39ee504ffepk11np0qMJ247d.json  ses_0e4fe8cb8ffeHzHFnQ4T2zzH7l.json  ses_0e8c97cb0ffegmE4tkUsjRVLTj.json  ses_0e8f02fecffeKvtfISAlDd9STi.json  ses_0e8fa4e74ffe5fKvp60FGjTX1Z.json  ses_0e9002f55ffeq0U8yNfdyg78I9.json
src/: main.rs
src/adapters/: clock.rs  fs.rs  logger.rs  mod.rs  process_control.rs  process_runner.rs  stdout_logger.rs
src/application/: mod.rs  scheduler.rs  start.rs
src/domain/: cron_expr.rs  crontab.rs  mod.rs
tests/: arch.rs  journey_pron.rs  port_clock.rs  port_filesystem.rs  port_logger.rs  port_process_control.rs  port_process_runner.rs  system_daemon_mode.rs  system_foreground.rs  system_missing_crontab.rs  system_pron_stop.rs  system_single_instance.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+15 files in other folders)
