[package]
name = "pron"
version = "0.1.0"
edition = "2024"

[features]
test-support = []

[dependencies]
libc = "0.2"
signal-hook = "0.3"

[dev-dependencies]
pron = { path = ".", features = ["test-support"] }
tempfile = "3"

[profile.mutants]
inherits = "test"
debug = false

[workspace]
members = ["xtask"]
