[package]
name = "pron"
version = "0.1.0"
edition = "2024"
description = "A folder-scoped cron that reads a .prontab from its working directory"
license = "MIT"
repository = "https://github.com/anicholson/pron"

[features]
test-support = []

[dependencies]
libc = "0.2"
signal-hook = "0.3"

[dev-dependencies]
pron = { path = ".", features = ["test-support"] }
tempfile = "3"

[profile.mutants]
inherits = "test"
debug = false

[workspace]
members = ["xtask"]

[profile.release]
codegen-units=1
lto = true
